--- a/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.Rmd
+++ b/_posts/2021-06-24-setting-up-and-debugging-custom-fonts/setting-up-and-debugging-custom-fonts.Rmd
@@ -138,7 +138,7 @@ Font files come in many forms. In general, fonts files that match these two crit
 
      We see that static fonts are differentiated from variable fonts by having a distinct file for each style, like _Alegreya-Black.ttf_. On the other hand, variable fonts usually say "variable" somewhere in the file name, and are slightly larger in size than any individual static member. Note that not all fonts have both static and variable files, and not all static font files are _.ttf_ (there can be static _.otf_ and variable _.ttf_ files).^[In my experience, though, static fonts tend to be _.ttf_ and variable fonts tend to be _.otf_.]
 
-The above two images show the contents of the _.zip_ file that you'd get if you went to [Google Fonts](https://fonts.google.com/) (an awesome repository of free and open-source professional fonts) and clicked the **Download family** button on the [page for Alegreya](https://fonts.google.com/specimen/Alegreya). If you want to use the Alegreya font family ([Open Font License](https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL)^["You can use them freely in your products & projects - print or digital, commercial or otherwise. However, you can't sell the fonts on their own."]) in R, then you simply drag-and-drop all the static font files in `/static` into your system's font folder (or in Settings > Fonts for Windows 10).
+The above two images show the contents of the _.zip_ file that you'd get if you went to [Google Fonts](https://fonts.google.com/) (an awesome repository of free and open-source professional fonts) and clicked the **Download family** button on the [page for Alegreya](https://fonts.google.com/specimen/Alegreya). If you want to use the Alegreya font family ([Open Font License](https://scripts.sil.org/cms/scripts/page.php?site_id=nrsi&id=OFL)^["You can use them freely in your products & projects - print or digital, commercial or otherwise. However, you can't sell the fonts on their own."]) in R, then you simply drag-and-drop all the static font files in _/static_ into your system's font folder (or in Settings > Fonts for Windows 10).
 
 ### Checking that a font is installed and available
 
