--- a/index.Rmd
+++ b/index.Rmd
@@ -20,10 +20,6 @@ d-title p {
   text-align:center;
 }
 
-p {
-  font-family: 'Roboto';
-}
-
 .hero-left img {
   width: 100%;
   border-radius: 15%;
@@ -89,7 +85,7 @@ p {
     <strong style="font-family: Roboto Slab; font-size: 1.2em">
       <i class="fa fa-flask" aria-hidden="true" style="padding-right:12.5px"></i> Methods: 
     </strong>
-    Eye-tracking, self-paced reading, comprehension tasks, corpus analysis
+    Eye-tracking, sentence comprehension, text/speech corpus analysis
   </p>
   <p style="margin-bottom:1.5em">
     <strong style="font-family:Roboto Slab; font-size:1.2em">
@@ -107,10 +103,10 @@ p {
 
 I am a second year PhD student in [Linguistics at the University of Pennsylvania](https://live-sas-www-ling.pantheon.sas.upenn.edu/). I use computational and behavioral methods to study how comprehenders parse linguistic input, both in real time and at different stages of language development.
 
-I received my B.A. in Linguistics from Northwestern University, where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant for (and still collaborate with) the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/) (P.I. [Elizabeth Norton](https://www.communication.northwestern.edu/faculty/ElizabethNorton)) in Communication Sciences and Disorders. I wrote my thesis on the role of prosodic focus in semantic reanalysis in the processing of garden-path sentences with local attachment ambiguity.
+I received my B.A. in Linguistics from Northwestern University, where I worked with [Jennifer Cole](https://sites.northwestern.edu/cole/), [Masaya Yoshida](https://faculty.wcas.northwestern.edu/~myo507/), and [Annette D'Onofrio](https://faculty.wcas.northwestern.edu/~akd2621/). I also worked as a research assistant for (and still collaborate with) the [Language, Education, and Reading Neuroscience Lab](https://learnlab.northwestern.edu/)) in Communication Sciences and Disorders. I wrote my thesis on the role of prosodic focus in semantic reanalysis in the processing of garden-path sentences with local attachment ambiguity.
 
 Beyond linguistics research, I have interests in data visualization, science communication, and the R programming language. I'm especially passionate about explanatory data viz in academic research and strongly believe that _style_ is just as important as _content_. I [blog](https://yjunechoe.github.io/blog.html) about these topics in my spare time as a hobby. I am also a [Penn MindCORE](https://mindcore.sas.upenn.edu/) student affiliate and work as a data science tutor for researchers at Penn.
 
 <p></p>
 
-<div style='text-align: center'><span class="sc" style="font-size:1.2em">contact me: </span> yj<span>choe</span>\@sas.upenn.edu</div>
+<div style='text-align: center; font-family: Fira Mono;'><span class="sc" style="font-size:1.2em">contact me: </span> yj<span>choe</span>\@sas.upenn.edu</div>
